# liveportrait-tokenizer

./: .gitignore  README.md  generate_speech_motion_tokens.py  inference.py  preprocess_driving_videos.py  process_videos.sh  pyproject.toml  reconstruct_exp.ipynb  reconstruct_motions.ipynb  setup.sh  sync_multiple_videos.py  sync_snac_motion_tokenizer.ipynb  test_snac_motion_tokens.ipynb  test_tokenizer.ipynb  testing.ipynb  train_exp.py  train_speech_motion_llm.py  train_stage2.py  train_tokenizer.py  train_two_stage_vqvae.py
configs/: default.yaml  fcvqvae_config.yaml  fsq_config.yaml  preprocess.yaml  res_vqvae_config.yaml  token_generation.yaml  tokenizer_config.yaml  two_stage.yaml  vqvae_config.yaml
sample_data/: stats_all.pkl
sample_data/pickles/: WQvT1_tQDhg_22.pkl
src/: __init__.py  data_collator.py  dataset.py  full_dataset.py  live_portrait_pipeline.py  live_portrait_wrapper.py  motion_dataset.py  tokenizer_module.py
src/config/: argument_config.py
src/modules/: fc_vqvae.py  finite_scalar_quantizer.py  fsq_vqvae.py  motion_extractor.py  quantizer.py  res_vqvae.py  resnet.py  vqvae.py
src/utils/: cropper.py  video.py
tokenizer_module/: config.json
utils/: __init__.py  tokenizer_utils.py
